--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -11,7 +11,7 @@
         android:layout_width="300dp"
         android:layout_height="100dp"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="100dp"
+        android:layout_marginTop="50dp"
 
         />
 
@@ -42,6 +42,7 @@
         android:layout_marginTop="5dp"
         android:hint="phone number"
         android:inputType="number"
+        android:enabled="false"
         android:textColor="@color/colorPrimaryDark"
         android:textColorHint="@color/colorPrimaryDark" />
 
@@ -61,6 +62,23 @@
         android:textColor="@color/colorPrimaryDark"
         android:textColorHint="@color/colorPrimaryDark" />
 
+    <EditText
+        android:id="@+id/register_confirm_password"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/register_password"
+        android:textSize="20sp"
+        android:padding="20dp"
+        android:paddingTop="30dp"
+        android:layout_marginLeft="15dp"
+        android:layout_marginRight="15dp"
+        android:layout_marginTop="5dp"
+        android:hint="Confirm Password"
+        android:inputType="textWebPassword"
+        android:textColor="@color/colorPrimaryDark"
+        android:textColorHint="@color/colorPrimaryDark" />
+
+
     <Button
         android:id="@+id/register_btn"
         android:layout_width="match_parent"
@@ -69,7 +87,7 @@
         android:layout_marginLeft="15dp"
         android:layout_marginRight="15dp"
         android:text="Create Account"
-        android:layout_below="@+id/register_password"
+        android:layout_below="@+id/register_confirm_password"
         />
 
 </RelativeLayout>
